web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-name-strict/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (2,13)
2|function fn(yield) {}
 |           ^
[SyntaxError]: unexpect keyword in strict mode (2,13)
2|function fn(yield) {}
 |           ^
